*1.15.3* (March 12th, 2007)

* Consistently quote primary key column names.  #7763 [toolmantim]

* Fixtures: fix YAML ordered map support.  #2665 [Manuel Holtgrewe, nfbuckley]

* Fix has_many :through << with custom foreign keys.  #6466, #7153 [naffis, Rich Collins]


*1.15.2* (February 5th, 2007)

* Pass a range in :conditions to use the SQL BETWEEN operator.  #6974 [dcmanges]
    Student.find(:all, :conditions => { :grade => 9..12 })

* Don't create instance writer methods for class attributes. [Rick]

* When dealing with SQLite3, use the table_info pragma helper, so that the bindings can do some translation for when sqlite3 breaks incompatibly between point releases. [Jamis Buck]

* SQLServer: don't choke on strings containing 'null'.  #7083 [Jakob S]

* Consistently use LOWER() for uniqueness validations (rather than mixing with UPPER()) so the database can always use a functional index on the lowercased column.  #6495 [Si]

* MySQL: SET SQL_AUTO_IS_NULL=0 so 'where id is null' doesn't select the last inserted id.  #6778 [Jonathan Viney, timc]

* Fixtures use the table name and connection from set_fixture_class.  #7330 [Anthony Eden]

* SQLServer: quote table name in indexes query.  #2928 [keithm@infused.org]


*1.15.1* (January 17th, 2007)

* Fix nodoc breaking of adapters


*1.15.0* (January 16th, 2007)

* [DOC] clear up some ambiguity with the way has_and_belongs_to_many creates the default join table name.  #7072 [jeremymcanally]

* change_column accepts :default => nil. Skip column options for primary keys.  #6956, #7048 [dcmanges, Jeremy Kemper]

* MySQL, PostgreSQL: change_column_default quotes the default value and doesn't lose column type information.  #3987, #6664 [Jonathan Viney, manfred, altano@bigfoot.com]

* Oracle: create_table takes a :sequence_name option to override the 'tablename_seq' default.  #7000 [Michael Schoen]

* MySQL: retain SSL settings on reconnect.  #6976 [randyv2]

* SQLServer: handle [quoted] table names.  #6635 [rrich]
