@@ -1,5 +1,7 @@
 *1.15.3* (March 12th, 2007)
 
+* Allow a polymorphic :source for has_many :through associations. Closes #7143 [protocool] 
+
 * Consistently quote primary key column names.  #7763 [toolmantim]
 
 * Fixtures: fix YAML ordered map support.  #2665 [Manuel Holtgrewe, nfbuckley]
